added string count in diary

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -69,11 +69,11 @@
 										src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 							</div>
 							<div class="diary-table-string__column-names">
-								<div>Вес, г</div>
-								<div class="diary-kcal__breakfast-amount">400 Ккал</div>
-								<div>У</div>
-								<div>Б</div>
-								<div>Ж</div>
+								<div id="stringWeightBreakfast">Вес, г</div>
+								<div class="diary-kcal__breakfast-amount" id="stringKkalBreakfast">Ккал</div>
+								<div id="stringCarbBreakfast">У</div>
+								<div id="stringProteinBreakfast">Б</div>
+								<div id="stringFatBreakfast">Ж</div>
 							</div>
 						</div>
 
@@ -101,11 +101,11 @@
 							<img class="diary-table-string__add-btn-img" src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 						</div>
 						<div class="diary-table-string__column-names">
-							<div>Вес, г</div>
-							<div class="diary-kcal__lunch-amount">Ккал</div>
-							<div>У</div>
-							<div>Б</div>
-							<div>Ж</div>
+							<div id="stringWeightLunch">Вес, г</div>
+								<div class="diary-kcal__breakfast-amount" id="stringKkalLunch">Ккал</div>
+								<div id="stringCarbLunch">У</div>
+								<div id="stringProteinLunch">Б</div>
+								<div id="stringFatLunch">Ж</div>
 						</div>
 					</div>
 					<div id="diary-loader" style="display:none;"></div>
@@ -132,11 +132,11 @@
 										src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 							</div>
 							<div class="diary-table-string__column-names">
-								<div>Вес, г</div>
-								<div class="diary-kcal__dinner-amount">Ккал</div>
-								<div>У</div>
-								<div>Б</div>
-								<div>Ж</div>
+								<div id="stringWeightDinner">Вес, г</div>
+								<div class="diary-kcal__breakfast-amount" id="stringKkalDinner">Ккал</div>
+								<div id="stringCarbDinner">У</div>
+								<div id="stringProteinDinner">Б</div>
+								<div id="stringFatDinner">Ж</div>
 							</div>
 						</div>
 
@@ -162,11 +162,11 @@
 								<img class="diary-table-string__add-btn-img" src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 							</div>
 							<div class="diary-table-string__column-names">
-								<div>Вес, г</div>
-								<div>Ккал</div>
-								<div>У</div>
-								<div>Б</div>
-								<div>Ж</div>
+								<div id="stringWeightSnack">Вес, г</div>
+								<div class="diary-kcal__breakfast-amount" id="stringKkalSnack">Ккал</div>
+								<div id="stringCarbSnack">У</div>
+								<div id="stringProteinSnack">Б</div>
+								<div id="stringFatSnack">Ж</div>
 							</div>
 						</div>
 
