--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
           <div class="profile-RSK__kkal">
             <p class="font-black">Ваша дневная норма составляет</p>
             <p class="font-orange">
-              <span class="font-figure result-rsk">-</span> 
+              <span class="font-figure result-rsk">-</span> ккал
             </p>
           </div>
           <div class="profile-RSK__macro">
@@ -350,9 +350,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
 
   <script src="./modules/notification.js"></script>
-  <script src="./modules/profile.js"></script>
   <script src="./modules/registration.js"></script>
   <script src="./modules/customization.js"></script>
+  <script src="./modules/profile.js"></script>
   <script src="./modules/side-bar.js"></script>
 
 </body>
