trying count strings

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -91,11 +91,11 @@
 										src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 							</div>
 							<div class="diary-table-string__column-names">
-								<div id="stringWeightBreakfast">Вес, г</div>
-								<div class="diary-kcal__breakfast-amount" id="stringKkalBreakfast">Ккал</div>
-								<div id="stringCarbBreakfast">У</div>
-								<div id="stringProteinBreakfast">Б</div>
-								<div id="stringFatBreakfast">Ж</div>
+								<div id="stringWeightBreakfast">Вес, 0 г</div>
+								<div class="diary-kcal__breakfast-amount" id="stringKkalBreakfast">0 Ккал</div>
+								<div id="stringCarbBreakfast">0 У</div>
+								<div id="stringProteinBreakfast">0 Б</div>
+								<div id="stringFatBreakfast">0 Ж</div>
 							</div>
 						</div>
 
@@ -124,11 +124,11 @@
 							<img class="diary-table-string__add-btn-img" src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 						</div>
 						<div class="diary-table-string__column-names">
-							<div id="stringWeightLunch">Вес, г</div>
-								<div class="diary-kcal__breakfast-amount" id="stringKkalLunch">Ккал</div>
-								<div id="stringCarbLunch">У</div>
-								<div id="stringProteinLunch">Б</div>
-								<div id="stringFatLunch">Ж</div>
+							<div id="stringWeightLunch">Вес, 0 г</div>
+								<div class="diary-kcal__breakfast-amount" id="stringKkalLunch">0 Ккал</div>
+								<div id="stringCarbLunch">0 У</div>
+								<div id="stringProteinLunch">0 Б</div>
+								<div id="stringFatLunch">0 Ж</div>
 						</div>
 					</div>
 					<div id="diary-loader" style="display:none;"></div>
@@ -159,11 +159,11 @@
 										src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 							</div>
 							<div class="diary-table-string__column-names">
-								<div id="stringWeightDinner">Вес, г</div>
-								<div class="diary-kcal__breakfast-amount" id="stringKkalDinner">Ккал</div>
-								<div id="stringCarbDinner">У</div>
-								<div id="stringProteinDinner">Б</div>
-								<div id="stringFatDinner">Ж</div>
+								<div id="stringWeightDinner">Вес, 0 г</div>
+								<div class="diary-kcal__breakfast-amount" id="stringKkalDinner">0 Ккал</div>
+								<div id="stringCarbDinner">0 У</div>
+								<div id="stringProteinDinner">0 Б</div>
+								<div id="stringFatDinner">0 Ж</div>
 							</div>
 						</div>
 
@@ -192,11 +192,11 @@
 								<img class="diary-table-string__add-btn-img" src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 							</div>
 							<div class="diary-table-string__column-names">
-								<div id="stringWeightSnack">Вес, г</div>
-								<div class="diary-kcal__breakfast-amount" id="stringKkalSnack">Ккал</div>
-								<div id="stringCarbSnack">У</div>
-								<div id="stringProteinSnack">Б</div>
-								<div id="stringFatSnack">Ж</div>
+								<div id="stringWeightSnack">Вес, 0 г</div>
+								<div class="diary-kcal__breakfast-amount" id="stringKkalSnack">0 Ккал</div>
+								<div id="stringCarbSnack">0 У</div>
+								<div id="stringProteinSnack">0 Б</div>
+								<div id="stringFatSnack">0 Ж</div>
 							</div>
 						</div>
 
@@ -226,11 +226,11 @@
                 <div
                   class="diary-table-string__column-names diary-table-string__column-names_color_dark-blue diary-table-string-2"
                 >
-                  <div>Вес, г</div>
-                  <div>Ккал</div>
-                  <div class="diary-macro__carbo-amount">У</div>
-                  <div class="diary-macro__protein-amount">Б</div>
-                  <div class="diary-macro__fats-amount">Ж</div>
+                  <div>Вес, 0 г</div>
+                  <div>0 Ккал</div>
+                  <div class="diary-macro__carbo-amount">0 У</div>
+                  <div class="diary-macro__protein-amount">0 Б</div>
+                  <div class="diary-macro__fats-amount">0 Ж</div>
                 </div>
               </div>
             </div>
