--- a/pages/diary.html
+++ b/pages/diary.html
@@ -98,11 +98,11 @@
                   </button>
                 </div>
                 <div class="diary-table-string__column-names">
-                  <div>Вес, г</div>
-                  <div class="diary-kcal__breakfast-amount">400 Ккал</div>
-                  <div>У</div>
-                  <div>Б</div>
-                  <div>Ж</div>
+                  <div class="diary-weight__breakfast">Вес, г</div>
+                  <div class="diary-kcal__breakfast-amount"> Ккал</div>
+                  <div class="diary-carbs__breakfast">У</div>
+                  <div class="diary-protein__breakfast">Б</div>
+                  <div class="diary-fat__breakfast">Ж</div>
 
                 </div>
               </div>
