--- a/index.html
+++ b/index.html
@@ -99,19 +99,19 @@
     <div class="side-bar">
       <nav>
         <li>
-          <a class="side-bar__link side-bar__link_profile" href="./index.html"><img src="./assets/images/index/profile.svg"
+          <a class="side-bar__link side-bar__link_profile" href="#"><img src="./assets/images/index/profile.svg"
               alt="иконка ссылки на раздел профиль">Профиль</a>
         </li>
         <li class="side-bar__menu">
-          <a class="side-bar__link  side-bar__link_diary" href="./pages/diary.html"><img src="./assets/images/index/diary.svg"
+          <a class="side-bar__link  side-bar__link_diary" href="#"><img src="./assets/images/index/diary.svg"
               alt="иконка ссылки на раздел дневник">Дневник</a>
         </li>
         <li class="side-bar__menu">
-          <a class="side-bar__link side-bar__link_charts" href="./pages/charts.html"><img src="./assets/images/index/graph.svg"
+          <a class="side-bar__link side-bar__link_charts" href="#"><img src="./assets/images/index/graph.svg"
               alt="иконка ссылки на раздел динамика">Динамика</a>
         </li>
         <li class="side-bar__menu">
-          <a class="side-bar__link  side-bar__link_articles" href="./pages/articles.html"><img src="./assets/images/index/sampling.svg"
+          <a class="side-bar__link  side-bar__link_articles" href="#"><img src="./assets/images/index/sampling.svg"
               alt="иконка ссылки на раздел Статьи">Статьи</a>
         </li>
       </nav>
@@ -232,7 +232,7 @@
             <div class="profile-user__water-tracker">
               <img class="profile-user__water-img" src="./assets/images/index/water-droplet.svg"
                 alt="Рисунок капли">Трекер воды</div>
-            <div class="profile-user__water-amount"> <span class="profile-user__water-amount_data"> </span> <span
+            <div class="profile-user__water-amount"> <span class="profile-user__water-amount_data">0 мл</span> <span
                 class="font-black" id="topWaterAmount"> / 2000 мл</span></div>
           </div>
         </div>
@@ -338,14 +338,13 @@
         <p class="profile-notification__text">Чтобы продолжить, <a class="profile-notification__enter"
             href="#">войдите</a> в личный кабинет</p>
         <p class="profile-notification__text"> или <a class="profile-notification__reg" href="#"
-            onclick="openRegistration()">зарегистрируйтесь</a></p>
+            onclick="openRegistration()">зарегистрируйтесь </a></p>
       </div>
     </div>
   </div>
   <!-- notification pop-up -->
 
   <!-- Инна -->
-  <script src="http://code.jquery.com/jquery-2.0.2.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
 
