Revert "some strings count realisation"

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -91,11 +91,11 @@
 										src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 							</div>
 							<div class="diary-table-string__column-names">
-								<div>Вес, <span id="stringWeightBreakfast">0</span> г</div>
-								<div><span class="diary-kcal__breakfast-amount" id="stringKkalBreakfast">0</span> Ккал</div>
-								<div><span id="stringCarbBreakfast">0</span> У</div>
-								<div><span id="stringProteinBreakfast">0</span> Б</div>
-								<div><span id="stringFatBreakfast">0</span> Ж</div>
+								<div id="stringWeightBreakfast">Вес, 0 г</div>
+								<div class="diary-kcal__breakfast-amount" id="stringKkalBreakfast">0 Ккал</div>
+								<div id="stringCarbBreakfast">0 У</div>
+								<div id="stringProteinBreakfast">0 Б</div>
+								<div id="stringFatBreakfast">0 Ж</div>
 							</div>
 						</div>
 
