removing unnecessary code in charts.js

--- a/pages/charts.html
+++ b/pages/charts.html
@@ -55,9 +55,7 @@
 
 				<select id="days" class="charts-calorie__btn">
 					<option value="today">Сегодня</option>
-					<option value="yesterday">Вчера</option>
-					<option value="2023-05-16">17 мая</option>
-					<option value="2023-05-15">16 мая</option>
+					<!-- <option value="yesterday">Вчера</option>-->
 				</select>
 
 				<div class="charts-calorie__container">
@@ -101,9 +99,7 @@
 				</div>
 				<select id="days" class="charts-macro__btn">
 					<option value="today">Сегодня</option>
-					<option value="yesterday">Вчера</option>
-					<option value="2023-05-16">17 мая</option>
-					<option value="2023-05-15">16 мая</option>
+					<!-- <option value="yesterday">Вчера</option> -->
 				</select>
 
 				<div class="charts-macro__container">
