--- a/pages/diary.html
+++ b/pages/diary.html
@@ -124,11 +124,11 @@
 							<img class="diary-table-string__add-btn-img" src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 						</div>
 						<div class="diary-table-string__column-names">
-							<div id="stringWeightLunch">Вес, 0 г</div>
-								<div class="diary-kcal__breakfast-amount" id="stringKkalLunch">0 Ккал</div>
-								<div id="stringCarbLunch">0 У</div>
-								<div id="stringProteinLunch">0 Б</div>
-								<div id="stringFatLunch">0 Ж</div>
+							<div>Вес, <span id="stringWeightLunch">0</span> г</div>
+								<div><span class="diary-kcal__breakfast-amount" id="stringKkalLunch">0</span> Ккал</div>
+								<div><span id="stringCarbLunch">0</span> У</div>
+								<div><span id="stringProteinLunch">0</span> Б</div>
+								<div><span id="stringFatLunch">0</span> Ж</div>
 						</div>
 					</div>
 					<div id="diary-loader" style="display:none;"></div>
@@ -159,11 +159,11 @@
 										src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 							</div>
 							<div class="diary-table-string__column-names">
-								<div id="stringWeightDinner">Вес, 0 г</div>
-								<div class="diary-kcal__breakfast-amount" id="stringKkalDinner">0 Ккал</div>
-								<div id="stringCarbDinner">0 У</div>
-								<div id="stringProteinDinner">0 Б</div>
-								<div id="stringFatDinner">0 Ж</div>
+								<div>Вес, <span id="stringWeightDinner">0</span> г</div>
+								<div><span class="diary-kcal__breakfast-amount" id="stringKkalDinner">0</span>Ккал</div>
+								<div><span id="stringCarbDinner">0</span> У</div>
+								<div><span id="stringProteinDinner">0</span> Б</div>
+								<div><span id="stringFatDinner">0</span> Ж</div>
 							</div>
 						</div>
 
@@ -192,11 +192,11 @@
 								<img class="diary-table-string__add-btn-img" src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
 							</div>
 							<div class="diary-table-string__column-names">
-								<div id="stringWeightSnack">Вес, 0 г</div>
-								<div class="diary-kcal__breakfast-amount" id="stringKkalSnack">0 Ккал</div>
-								<div id="stringCarbSnack">0 У</div>
-								<div id="stringProteinSnack">0 Б</div>
-								<div id="stringFatSnack">0 Ж</div>
+								<div>Вес, <span id="stringWeightSnack">0</span> г</div>
+								<div><span class="diary-kcal__breakfast-amount" id="stringKkalSnack">0</span> Ккал</div>
+								<div><span id="stringCarbSnack">0</span> У</div>
+								<div><span id="stringProteinSnack">0</span> Б</div>
+								<div><span id="stringFatSnack">0</span> Ж</div>
 							</div>
 						</div>
 
