profile render function changes

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -76,8 +76,8 @@
           <div class="diary-diet-tracker">
             <!-- кнопка-заголовок таблицы дневника -->
             <button class="diary-diet-tracker__calendar-btn">
-              <!-- <span class="diary-diet-tracker__btn-text">Сегодня</span> -->
-              <input type="date" />
+              <span class="diary-diet-tracker__btn-text">Сегодня</span>
+              <!-- <input type="date" /> -->
               <!-- <div class="diary-diet-tracker__btn-arrow"></div> -->
             </button>
 
@@ -441,7 +441,7 @@
         <!-- Алла -->
         <!-- Поп ап добавить новый продукт -->
         <div class="wrapper">
-          <div class="diary__newproduct__popup">
+          <!-- <div class="diary__newproduct__popup">
             <div class="diary__newproduct__popup_container">
               <div class="newproduct__popup_body">
                 <div class="newproduct__popup_heading">
@@ -550,11 +550,11 @@
                 </button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
         <!-- Алла -->
         <!-- Поп ап продукт не найден -->
-        <div class="wrapper">
+        <!-- <div class="wrapper">
           <div class="diary__productnotfound__popup">
             <div class="diary__productnotfound__popup_container">
               <div class="diary__productnotfound__popup_body">
@@ -580,7 +580,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 		<div class="wrapper">
 			<div class="diary__productnotfound__popup-extra">
 			  <div class="diary__productnotfound__popup_container-extra">
