--- a/pages/diary.html
+++ b/pages/diary.html
@@ -98,12 +98,11 @@
                   </button>
                 </div>
                 <div class="diary-table-string__column-names">
-                  <div class="diary-weight__breakfast">Вес, г</div>
-                  <div class="diary-kcal__breakfast-amount"> Ккал</div>
-                  <div class="diary-carbs__breakfast">У</div>
-                  <div class="diary-protein__breakfast">Б</div>
-                  <div class="diary-fat__breakfast">Ж</div>
-
+                  <div>Вес, <span id="stringWeightBreakfast">0</span> г</div>
+                  <div><span class="diary-kcal__breakfast-amount" id="stringKkalBreakfast">0</span> Ккал</div>
+                  <div><span id="stringCarbBreakfast">0</span> У</div>
+                  <div><span id="stringProteinBreakfast">0</span> Б</div>
+                  <div><span id="stringFatBreakfast">0</span> Ж</div>
                 </div>
               </div>
 
@@ -234,11 +233,11 @@
                 <div
                   class="diary-table-string__column-names diary-table-string__column-names_color_dark-blue diary-table-string-2"
                 >
-                  <div>Вес, г</div>
-                  <div>Ккал</div>
-                  <div class="diary-macro__carbo-amount">У</div>
-                  <div class="diary-macro__protein-amount">Б</div>
-                  <div class="diary-macro__fats-amount">Ж</div>
+                  <div>Вес, <span class="diary-macro__weight-amount">0</span> г</div>
+                  <div><span class="diary-macro__kkal-amount">0</span> Ккал</div>
+                  <div><span class="diary-macro__carbo-amount">0</span> У</div>
+                  <div><span class="diary-macro__protein-amount">0</span> Б</div>
+                  <div><span class="diary-macro__fats-amount">0</span> Ж</div>
                 </div>
               </div>
             </div>
