--- a/pages/diary.html
+++ b/pages/diary.html
@@ -76,8 +76,8 @@
           <div class="diary-diet-tracker">
             <!-- кнопка-заголовок таблицы дневника -->
             <button class="diary-diet-tracker__calendar-btn">
-              <!-- <span class="diary-diet-tracker__btn-text">Сегодня</span> -->
-              <input type="date" />
+              <span class="diary-diet-tracker__btn-text">Сегодня</span>
+              <!-- <input type="date" /> -->
               <!-- <div class="diary-diet-tracker__btn-arrow"></div> -->
             </button>
 
@@ -98,12 +98,11 @@
                   </button>
                 </div>
                 <div class="diary-table-string__column-names">
-                  <div class="diary-weight__breakfast">Вес, г</div>
-                  <div class="diary-kcal__breakfast-amount"> Ккал</div>
-                  <div class="diary-carbs__breakfast">У</div>
-                  <div class="diary-protein__breakfast">Б</div>
-                  <div class="diary-fat__breakfast">Ж</div>
-
+                  <div>Вес, <span id="stringWeightBreakfast">0</span> г</div>
+                  <div><span class="diary-kcal__breakfast-amount" id="stringKkalBreakfast">0</span> Ккал</div>
+                  <div><span id="stringCarbBreakfast">0</span> У</div>
+                  <div><span id="stringProteinBreakfast">0</span> Б</div>
+                  <div><span id="stringFatBreakfast">0</span> Ж</div>
                 </div>
               </div>
 
@@ -125,28 +124,23 @@
               </div>
               <!-------------------------->
 
-              <div class="diary-table-string diary-table-string_color_blue">
-                <div class="diary-table-string__meal-name">
-                  Обед
-                  <button class="diary-table-string__add-btn" id="button-lunch">
-                    <img
-                      class="diary-table-string__add-btn-img"
-                      src="./../assets/images/diary/diary-add-button.svg"
-                      alt="плюс"
-                    />
-                  </button>
-                </div>
-                <div class="diary-table-string__column-names">
-                  <div>Вес, г</div>
-                  <div class="diary-kcal__lunch-amount">Ккал</div>
-                  <div>У</div>
-                  <div>Б</div>
-                  <div>Ж</div>
-                </div>
-              </div>
-              <div id="diary-loader" style="display: none"></div>
-
-              <!-- скрытый див №2 выпадающего списка, строки продуктов сюда ---->
+					<div class="diary-table-string diary-table-string_color_blue">
+						<div class="diary-table-string__meal-name">
+							Обед
+							<button class="diary-table-string__add-btn" id="button-lunch">
+							<img class="diary-table-string__add-btn-img" src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
+						</div>
+						<div class="diary-table-string__column-names">
+							<div>Вес, <span id="stringWeightLunch">0</span> г</div>
+								<div><span class="diary-kcal__breakfast-amount" id="stringKkalLunch">0</span> Ккал</div>
+								<div><span id="stringCarbLunch">0</span> У</div>
+								<div><span id="stringProteinLunch">0</span> Б</div>
+								<div><span id="stringFatLunch">0</span> Ж</div>
+						</div>
+					</div>
+					<div id="diary-loader" style="display:none;"></div>
+					
+					<!-- скрытый див №2 выпадающего списка, строки продуктов сюда ---->
 
               <div class="accordeon2 accordeon_hidden" id="accordeon-lunch">
                 <!-- Алла -->
@@ -164,28 +158,21 @@
               </div>
               <!-------------------------->
 
-              <div class="diary-table-string">
-                <div class="diary-table-string__meal-name">
-                  Ужин
-                  <button
-                    id="button-dinner"
-                    class="diary-table-string__add-btn"
-                  >
-                    <img
-                      class="diary-table-string__add-btn-img"
-                      src="./../assets/images/diary/diary-add-button.svg"
-                      alt="плюс"
-                    />
-                  </button>
-                </div>
-                <div class="diary-table-string__column-names">
-                  <div>Вес, г</div>
-                  <div class="diary-kcal__dinner-amount">Ккал</div>
-                  <div>У</div>
-                  <div>Б</div>
-                  <div>Ж</div>
-                </div>
-              </div>
+						<div class="diary-table-string">
+							<div class="diary-table-string__meal-name">
+								Ужин
+								<button id="button-dinner" class="diary-table-string__add-btn">
+									<img class="diary-table-string__add-btn-img"
+										src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
+							</div>
+							<div class="diary-table-string__column-names">
+								<div>Вес, <span id="stringWeightDinner">0</span> г</div>
+								<div><span class="diary-kcal__breakfast-amount" id="stringKkalDinner">0</span>Ккал</div>
+								<div><span id="stringCarbDinner">0</span> У</div>
+								<div><span id="stringProteinDinner">0</span> Б</div>
+								<div><span id="stringFatDinner">0</span> Ж</div>
+							</div>
+						</div>
 
               <!-- скрытый див №3 выпадающего списка, строки продуктов сюда ---->
               <div class="accordeon3 accordeon_hidden" id="accordeon-dinner">
@@ -204,25 +191,21 @@
               </div>
               <!-------------------------->
 
-              <div class="diary-table-string diary-table-string_color_blue">
-                <div class="diary-table-string__meal-name">
-                  Перекус
-                  <button class="diary-table-string__add-btn" id="button-snack">
-                    <img
-                      class="diary-table-string__add-btn-img"
-                      src="./../assets/images/diary/diary-add-button.svg"
-                      alt="плюс"
-                    />
-                  </button>
-                </div>
-                <div class="diary-table-string__column-names">
-                  <div>Вес, г</div>
-                  <div>Ккал</div>
-                  <div>У</div>
-                  <div>Б</div>
-                  <div>Ж</div>
-                </div>
-              </div>
+
+						<div class="diary-table-string diary-table-string_color_blue">
+                            <div class="diary-table-string__meal-name">
+                                Перекус
+                                <button class="diary-table-string__add-btn" id="button-snack">
+								<img class="diary-table-string__add-btn-img" src="./../assets/images/diary/diary-add-button.svg" alt="плюс"></button>
+							</div>
+							<div class="diary-table-string__column-names">
+								<div>Вес, <span id="stringWeightSnack">0</span> г</div>
+								<div><span class="diary-kcal__breakfast-amount" id="stringKkalSnack">0</span> Ккал</div>
+								<div><span id="stringCarbSnack">0</span> У</div>
+								<div><span id="stringProteinSnack">0</span> Б</div>
+								<div><span id="stringFatSnack">0</span> Ж</div>
+							</div>
+						</div>
 
               <!-- скрытый див №4 выпадающего списка, строки продуктов сюда ---->
 
@@ -250,11 +233,11 @@
                 <div
                   class="diary-table-string__column-names diary-table-string__column-names_color_dark-blue diary-table-string-2"
                 >
-                  <div>Вес, г</div>
-                  <div>Ккал</div>
-                  <div class="diary-macro__carbo-amount">У</div>
-                  <div class="diary-macro__protein-amount">Б</div>
-                  <div class="diary-macro__fats-amount">Ж</div>
+                  <div>Вес, <span class="diary-macro__weight-amount">0</span> г</div>
+                  <div><span class="diary-macro__kkal-amount">0</span> Ккал</div>
+                  <div><span class="diary-macro__carbo-amount">0</span> У</div>
+                  <div><span class="diary-macro__protein-amount">0</span> Б</div>
+                  <div><span class="diary-macro__fats-amount">0</span> Ж</div>
                 </div>
               </div>
             </div>
