updated weight update logic

--- a/pages/charts.html
+++ b/pages/charts.html
@@ -137,11 +137,11 @@
 				</div>
 				<div class="charts-weight__changes">
 					<div class="charts-weight__dropped">
-						<p class="charts-grid-weight-dropped-text">Сброшено/набрано <span class="charts-kg-green"></span>
+						<p class="charts-grid-weight-dropped-text">Данные о весе отсутствуют<span class="charts-kg-green"></span>
 						</p>
 					</div>
 					<div class="charts-weight__remained">
-						<p class="charts-grid-weight-remained-text">Осталось <span class="charts-kg-red"></span>
+						<p class="charts-grid-weight-remained-text"><span class="charts-kg-red"></span>
 						</p>
 					</div>
 				</div>
