try/catch logic include

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <div class="profile-user__kkal-wrapper-data">
                 <div class="profile-user__kkal-block">
                   <h3 class="profile-user__kkal-name font-black">Употреблено калорий:</h3>
-                  <div class="profile-user__kkal-amount profile-user__kkal-amount_eaten">1360</div>
+                  <div class="profile-user__kkal-amount profile-user__kkal-amount_eaten">-</div>
                 </div>
                 <div class="profile-user__kkal-block">
                   <h3 class="profile-user__kkal-name font-black">Осталось калорий:</h3>
@@ -205,7 +205,7 @@
                   <div class="profile-user__macro-scale-line profile-user__macro-scale-line_carbs">
                   </div>
                 </div>
-                <div class="profile-user__macro-amount"><span class="profile-user__macro-amount_span">142.6</span> г
+                <div class="profile-user__macro-amount"><span class="profile-user__macro-amount_span profile-user__macro-amount_carbs">-</span> 
                 </div>
               </div>
               <div class="profile-user__macro-block">
@@ -214,7 +214,7 @@
                   <div class="profile-user__macro-scale-line profile-user__macro-scale-line_protein">
                   </div>
                 </div>
-                <div class="profile-user__macro-amount"><span class="profile-user__macro-amount_span">94.4</span> г
+                <div class="profile-user__macro-amount"><span class="profile-user__macro-amount_span profile-user__macro-amount_prot">-</span> 
                 </div>
               </div>
               <div class="profile-user__macro-block">
@@ -223,7 +223,7 @@
                   <div class="profile-user__macro-scale-line profile-user__macro-scale-line_fat">
                   </div>
                 </div>
-                <div class="profile-user__macro-amount"><span class="profile-user__macro-amount_span">47.1</span> г
+                <div class="profile-user__macro-amount"><span class="profile-user__macro-amount_span profile-user__macro-amount_fat">-</span> 
                 </div>
               </div>
             </div>
