the code of the dynamics section has been updated to reflect the finalization of the diary

--- a/pages/charts.html
+++ b/pages/charts.html
@@ -8,7 +8,7 @@
 	<title>Мои результаты</title>
 	<link rel="stylesheet" href="../assets/styles/scss/layouts/normalize.css">
 	<link rel="shortcut icon" href="../assets/icons/calories.png" />
-	<!-- <link rel="stylesheet" href="../assets/styles/scss/main.css" /> -->
+	<link rel="stylesheet" href="../assets/styles/scss/main.css" />
 	<link rel="stylesheet" href="../assets/styles/scss/layouts/fonts.css" />
 	<link rel="stylesheet" href="../assets/styles/scss/layouts/side-bar.css" />
 	<link rel="stylesheet" href="./../assets/styles/scss/pages/charts.css" />
@@ -50,12 +50,11 @@
 			</div>
 			<div class="charts-calorie">
 				<div>
-					<p>Калории</p>
+					<p class="charts-calorie-title">Калории</p>
 				</div>
 
 				<select id="days" class="charts-calorie__btn">
 					<option value="today">Сегодня</option>
-					<!-- <option value="yesterday">Вчера</option>-->
 				</select>
 
 				<div class="charts-calorie__container">
@@ -99,7 +98,6 @@
 				</div>
 				<select id="days" class="charts-macro__btn">
 					<option value="today">Сегодня</option>
-					<!-- <option value="yesterday">Вчера</option> -->
 				</select>
 
 				<div class="charts-macro__container">
@@ -133,7 +131,7 @@
 
 			<div class="charts-weight">
 				<div class="charts-weight__actual">
-					<p>Ваш вес - </p>
+					<p class="charts-weight__actual-text">Ваш вес - </p>
 				</div>
 				<div class="charts-weight__changes">
 					<div class="charts-weight__dropped">
