diary sum bug fix

--- a/pages/diary.html
+++ b/pages/diary.html
@@ -262,7 +262,7 @@
                     class="diary-water-tracker__crrnt-res diary-water-tracker__top-res_font_inter"
                     >0</span
                   >
-                  <span class="diary-water-tracker__crrnt-res-ml">мл</span
+                  <span class="diary-water-tracker__crrnt-res-ml"></span
                   ><span
                     class="diary-water-tracker__top-res diary-water-tracker__top-res_font_inter"
                   >
