e-mail customization err fix

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             class="customization__text" type="text" placeholder="Фамилия" required>
           <input id="customization__text_bday" class="customization__text" type="date" placeholder="Дата рождения" required>
           <input id="customization__text_email" onKeyUp="this.value = this.value.replace(/[^a-zA-Z0-9@._-]/g, '');"
-            class="customization__text" type="text" placeholder="e-mail" required>
+            class="customization__text" type="text" placeholder="e-mail" disabled>
           <input id="customization__text_password" class="customization__text" type="text" placeholder="Пароль" required>
         
           <button onclick="customizationSave()">Сохранить</button>
